@@ -35,6 +35,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7231: urllib2 cannot handle https with proxy requiring auth. Patch by
+  Tatsuhiro Tsujikawa.
+
 - Issue #7348: StringIO.StringIO.readline(-1) now acts as if it got no argument
   like other file objects.
 
